# TaskManager

./: ManageTask.bat  README.md  builder.ipynb  manager.bat
.agent/: AGENT_FLOW.md  ARCHITECTURE.md  mcp_config.json
.agent/agents/: code-archaeologist.md  cpp-specialist.md  debugger.md  documentation-writer.md  orchestrator.md  performance-optimizer.md  project-planner.md  python-specialist.md  qa-automation-engineer.md  security-auditor.md  systems-architect.md
.agent/prompts/: extract-context.md  git-deploy.md  init-workflow-prompts.md  optimize-prompt.md  plan-tools-capabilities.md  split-task-by-context.md  verify.md
.agent/rules/: CPP_ARCHITECTURE.md  CPP_BENCHMARK.md  CPP_CI_CD_DOCKER.md  CPP_CLEAN_ARCH.md  CPP_CONCURRENCY.md  CPP_CQRS.md  CPP_DDD.md  CPP_DOD.md  CPP_FUNCTIONAL_CORE.md  CPP_LOGGING.md  CPP_STATIC_ANALYSIS.md  CPP_TDD.md  CPP_TESTING.md  GEMINI.md  GIT_WORKFLOW.md  PYTHON_ARCHITECTURE.md  PYTHON_CLEAN_CODE.md  PYTHON_PACKAGE_MANAGEMENT.md  PYTHON_TESTING.md  architecture.md  cpp-benchmark.md  cpp-cmake.md  cpp-logger.md  cpp-package.md  cpp-qt.md  cpp-static-analyze.md  cpp-swig.md  cpp-test-coverage.md  cpp-test.md  cpp-web.md  py-ci-cd.md  py-computer-vision.md  py-cv  py-cv.md  py-debug.md  py-docker.md  py-documentation.md  py-logger.md  py-pack.md  py-package.md  (+5 more)
.agent/scripts/: build.py  check_commit_msg.py  docs_python.py  format.py  format_python.py  lint.py  lint_python.py  run_benchmarks.py  run_pytest_coverage.py  run_static_analysis.py  run_test_coverage.py  verify_all.py  verify_all_python.py
.agent/skills/: doc.md
.agent/templates/: .pre-commit-config.yaml
.agent/workflows/: benchmark-cpp.md  benchmark-python.md  build-python.md  build.md  cpp-ci-cd.md  cpp-cmake.md  cpp-docker.md  cpp-documentation.md  cpp-project.md  cpp-qt.md  cpp-test-coverage.md  cpp-web.md  (+24 more)
.builder/: build.py
Help/cpp_module/: CMakeLists.txt  io.ixx
Help/cpp_module/config/: config.ixx
Help/cpp_module/test/: benchmark.ixx
Manager/: CMakeLists.txt  manager.cpp
ManagerProject/: CMakeLists.txt
ManagerProject/TaskTools/TaskCodeTools/: CMakeLists.txt  TaskCode.py
ManagerProject/TaskTools/TaskCodeTools/.devcontainer/: devcontainer.json
TaskTools/: .clang-format  .clangd  .gitignore  CMakeConfig.cmake  CMakeLists.txt  Dockerfile  Doxyfile  IN_PROGRESS.md  README.md  UML.md  conanfile.py  conanfile.txt  dependences.cmake  fetch_install.cmake  interfaces.hpp  main.cpp  main.cxx  modules.cmake  pch.hpp  run.bat  run.ps1  structures.hpp  task.cpp  task.hpp  task.py
TaskTools/.devcontainer/: Dockerfile  default
TaskTools/TaskCodeTools/doc/: README.md
TaskTools/TaskCodeTools/include/: test.h
TaskTools/TaskCodeTools/src/: main.cpp
TaskTools/_help/TaskWriteTools/: TaskWriteForm.md
TaskTools/_help/cpp_module/test/: test.ixx
TaskTools/_help/cpp_python/: CMakeLists.txt  conanfile.py  task.py
TaskTools/_help/cpp_python/include/: benchmark.hpp  config.hpp  io.hpp  test.hpp
TaskTools/_help/cpp_python/src/: main.cpp
TaskTools/_help/doc/: Dockerfile  Makefile
TaskTools/_help/ui/: main.html
TaskTools/cmake/: targets.cmake
TaskTools/cmake/flags/: flags.cmake
TaskTools/cmake/format/: format.cmake
TaskTools/cmake/git/: git.cmake
TaskTools/cmake/profiles/: clang-debug  clang-release
TaskTools/cmake/python/: swig.cmake  task.pyi
TaskTools/cmake/structs/: structs.cmake
TaskTools/config/: WASM.mak  config.ixx
TaskTools/doc/: README.md
TaskTools/example/: CMakeLists.txt
TaskTools/include/: benchmark.hpp  config.hpp  connector.hpp  custom_include.hpp  io.hpp  log.hpp  parralel.hpp  test.hpp
TaskTools/libs/: CMakeLists.txt  init.cmake
TaskTools/src/: main.cpp  pch.hpp  task.hpp
TaskTools/src/adapters/controllers/: user_controller.cpp  user_controller.hpp
TaskTools/src/adapters/persistence/: in_memory_user_repository.cpp
TaskTools/src/adapters/presenters/: user_presenter.hpp
TaskTools/src/core/entities/: user.cpp  user.hpp
TaskTools/src/core/use_cases/: create_user.cpp  create_user.hpp  i_user_repository.hpp
TaskTools/src/main/: main.cpp
TaskTools/subsrc/: index.html  test.py  wrapper.i
TaskTools/task/: CMakeLists.txt  task.cpp  task.hpp
TaskTools/test/: CMakeLists.txt  benchmark.ixx  dependences.cmake  test.ixx
TaskTools/test/task/: CMakeLists.txt  test.yaml
TaskTools/test/task/src/: benchmark.hpp  config.hpp  main.cpp  stopwatch.hpp  test.hpp
TaskTools/tests/: test_main.cpp
TaskTools/tests/adapters/persistence/: test_in_memory_repository.cpp
TaskTools/tests/core/entities/: test_user.cpp
TaskTools/tests/core/use_cases/: test_create_user.cpp
TaskTools/tools/: CMakeLists.txt  logger.cpp  logger.hpp  parser.hpp  thread_pool.h  time.hpp  tools.hpp
TaskTools/tools/other/: Doxyfile  conan_provider.cmake  dependences.cmake  index.html  wrapper.i
TaskTools/tools/other/my/: CMakeLists.txt  interfaces.hpp  my.cpp  my.hpp  structures.hpp
TaskTools/tools/other/my_project/: Cargo.toml
TaskTools/tools/other/my_project/benches/: benches-module1.rs  benches-module2.rs
TaskTools/tools/other/my_project/examples/: example-main.rs
TaskTools/tools/other/my_project/tests/: test-module1.rs  test-module2.rs
TaskTools/tools/other/qt/: CMakeLists.txt  main.cpp  pch.hpp  task.hpp
TaskTools/tools/other/swig/python/: CMakeLists.txt
TaskTools/tools/other/web/: CMakeLists.txt
TaskTools/tools/other/web/backend/: CMakeLists.txt
Test/: .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  config.yaml
Test/.devcontainer/: devcontainer.json
Test/cmake/format/: format.cmake
Test/cmake/git/: git.cmake
Test/cmake/profiles/: clang-debug  clang-release
Test/cmake/python/: task.i
Test/cmake/structs/: task.proto
Test/example/: CMakeLists.txt
Test/src/: task.hpp
Test/tests/: task_test.cpp
manager/: CMakeLists.txt  manager.cpp
scripts/: cpp_ai_init.py  install.py  install_github.py
workflows/: cpp-benchmark.md  cpp-debug.md  cpp-package.md  cpp-refactor.md  cpp-static-analyze.md  cpp-test.md  py-benchmark.md  py-ci-cd.md  py-debug.md  py-refactor.md  py-static-analyze.md  py-test.md
(+48 files in other folders)
